# OpenTelemetry-MATLAB

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  OtelMatlabProxyFactory.cpp  OtelMatlabProxyFactory.h  README.md  codecov.yml  otel-cpp.patch  vcpkg.json
.github/workflows/: build.yml  build_and_test.yml  build_and_test_codecov.yml  build_and_test_full.yml  build_and_test_simple.yml  build_and_test_supported_versions.yml  container_build.yml  create_release.yml  debug_mac_dependencies.yml  multiple_mltbx.yml  performance_benchmark.yml  publish.yml  publish_mltbx.yml  test_linux_build.yml  test_packaging.yml
api/baggage/+opentelemetry/+baggage/: Baggage.m  Context.m
api/baggage/src/: BaggageProxy.cpp
api/common/+opentelemetry/+common/: mustBeScalarString.m  processAttributes.m
api/common/src/: attribute.cpp
api/context/+opentelemetry/+context/: Context.m  Token.m  getCurrentContext.m
api/context/src/: CompositePropagatorProxy.cpp  ContextProxy.cpp  TextMapCarrierProxy.cpp  TextMapPropagatorProxy.cpp
api/logs/+opentelemetry/+logs/: Logger.m  LoggerProvider.m  Provider.m  getLogger.m
api/logs/src/: LoggerProviderProxy.cpp  LoggerProxy.cpp
api/metrics/+opentelemetry/+metrics/: AsynchronousInstrument.m  Counter.m  Gauge.m  Histogram.m  Meter.m  MeterProvider.m  ObservableCounter.m  ObservableGauge.m  ObservableResult.m  ObservableUpDownCounter.m  Provider.m  SynchronousInstrument.m  UpDownCounter.m  collectObservableMetrics.m  getMeter.m
api/metrics/src/: AsynchronousInstrumentProxy.cpp  AsynchronousInstrumentProxyFactory.cpp  CounterProxy.cpp  GaugeProxy.cpp  HistogramProxy.cpp  MeasurementFetcher.cpp  MeterProviderProxy.cpp  MeterProxy.cpp  SynchronousInstrumentProxyFactory.cpp  UpDownCounterProxy.cpp
api/trace/+opentelemetry/+trace/: Context.m  Link.m  Provider.m  Scope.m  Span.m  SpanContext.m  Tracer.m  TracerProvider.m  getCurrentSpan.m  getTracer.m
api/trace/src/: SpanContextProxy.cpp  SpanProxy.cpp  TracerProviderProxy.cpp  TracerProxy.cpp  attribute.cpp
api/utils/+opentelemetry/+utils/: mustBeScalarString.m
auto-instrumentation/: README.md
auto-instrumentation/+opentelemetry/+autoinstrument/: AutoTrace.m  AutoTraceInstrumentor.p
cmake/vcpkg_triplets/: arm64-osx-otel-matlab.cmake  x64-osx-otel-matlab.cmake  x64-windows-otel-matlab.cmake  x86_64-osx-otel-matlab.cmake
examples/: CMakeLists.txt
examples/ai_agent/: AddObservabilityToAIAgent.md  AddObservabilityToAIAgent.mlx  InstrumentedAIAgentExample.mlx  run_example.m
examples/ai_agent/mlx-script/: AddObservabilityToAIAgent.mlx
examples/ai_agent_manual/: InstrumentedAIAgentExample.mlx  README.md
examples/autotrace/: README.md  autotrace_example.m  run_example.m
examples/context_propagation/: CMakeLists.txt  README.md
examples/context_propagation/cpp/: CMakeLists.txt  HttpTextMapCarrier.h  client.cc
examples/context_propagation/matlab/: mymagic.m  routes.json
examples/logs/: README.md  logs_example.m
examples/metrics/: README.md  async_metrics_example.m  async_metrics_example_callbacks.m  metrics_example.m
examples/parallel/: README.md  parfor_example.m
examples/trace/: README.md  trace_example.m
examples/webread/: CMakeLists.txt  README.md
examples/webread/cpp/: CMakeLists.txt  HttpTextMapCarrier.h  server.cc  server.h
examples/webread/matlab/: webread_example.m
exporters/otlp/src/: OtlpFileLogRecordExporterProxy.cpp  OtlpFileMetricExporterProxy.cpp  OtlpFileSpanExporterProxy.cpp  OtlpGrpcLogRecordExporterProxy.cpp  OtlpGrpcMetricExporter.cpp  OtlpGrpcMetricExporterProxy.cpp  OtlpGrpcSpanExporterProxy.cpp  OtlpHttpLogRecordExporterProxy.cpp  OtlpHttpMetricExporterProxy.cpp  OtlpHttpSpanExporterProxy.cpp
mex/: gateway.cpp
patches/: grpc-mac.patch  otel-cpp-mac.patch  otel-cpp-windows.patch
sdk/common/+opentelemetry/+sdk/+common/: Cleanup.m  (+2 more)
sdk/common/src/: InternalLogHandlerProxy.cpp  resource.cpp
sdk/logs/src/: BatchLogRecordProcessorProxy.cpp  LoggerProviderProxy.cpp  SimpleLogRecordProcessorProxy.cpp
sdk/metrics/src/: MeterProviderProxy.cpp  PeriodicExportingMetricReader.cpp  PeriodicExportingMetricReaderProxy.cpp  ViewProxy.cpp
sdk/trace/src/: BatchSpanProcessorProxy.cpp  ParentBasedSamplerProxy.cpp  SimpleSpanProcessorProxy.cpp  TracerProviderProxy.cpp
test/: ._commonSetupOnce.m  ._terminateCollector.m  commonSetup.m  commonSetupOnce.m  commonTeardown.m  readJsonResults.m  tautotrace.m  tbaggage.m  tbuildtoolplugin.m  tcontextPropagation.m  tendpoint.m  terminateCollector.m  texamples.m  tformat.m  thttpheaders.m  tjsonbytesmapping.m  tlogs.m  tlogs_sdk.m  tmetrics.m  tmetrics_sdk.m  ttimeout.m  ttrace.m  ttrace_sdk.m  tusejsonname.m
test/autotrace_examples/example1/: best_fit_line.m  example1.m  example1_trycatch.m  generate_data.m
test/autotrace_examples/example2/: example2.m
test/autotrace_examples/example2/helpers/: ex2helper1.m  ex2helper2.m
test/autotrace_examples/linearfit_example/: best_fit_line.m  generate_data.m  linearfit_example.m  linearfit_example_trycatch.m
test/autotrace_examples/manual_instrumented_example/: best_fit_line.m  generate_data.m  manual_instrumented_example.m
test/autotrace_examples/matfile_example/: matfile_example.m  mymagic.mat
test/autotrace_examples/subfolder_example/: subfolder_example.m
test/autotrace_examples/subfolder_example/helpers/: subfolder_helper1.m  subfolder_helper2.m
test/autotrace_examples/two_subfolders_example/: two_subfolders_example.m
test/callbacks/: callbackNoAttributes.m  callbackOneInput.m  callbackWithAttributes.m  callbackWithAttributes2.m  callbackWithAttributes3.m
test/config/: nondefault_endpoint.yml  otelcol_config.yml
test/fixtures/: LoggerProviderFixture.m  MeterProviderFixture.m  TracerProviderFixture.m
test/performance/: logsTest.m  metricsTest.m  runPerf.m  traceTest.m
test/utils/: CppServerFixture.m  SuppressInternalLogs.m  closeWindow.m  commonSetupOnce.m  commonTeardown.m  generateException.m  readJsonResults.m  terminateProcess.m
test/view/: testattributes.m  testhistogram.m  testviewcounter.m  testviewupdown.m
tools/: packageMatlabInterface.m
(+122 files in other folders)
